--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,6 +9,21 @@
   }
 }
 
-@layer {
-  @apply {}
+@layer components {
+  .layout {
+    @apply mx-auto w-[1140px]
+  }
+
+}
+
+* {
+  font-family: "Manrope", sans-serif;
+
+}
+
+.btn-primary {
+  background: linear-gradient(#5F90F0, #185AD9);
+  color: white;
+  border: none;
+  border-radius: 999px;
 }
