--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,14 @@
     @apply mx-auto w-[1140px]
   }
 
+  .container {
+    @apply max-w-[1440px] mx-auto
+  }
+
+  .spacing {
+    @apply px-[150px]
+  }
+
   .center {
     @apply flex justify-center items-center
   }
@@ -113,7 +121,7 @@ body {
 }
 
 .slider {
-  width: 100vw;
+  width: 100%;
   overflow-x: auto;
   scroll-behavior: smooth;
 
