--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,6 +62,14 @@ body {
   background: linear-gradient(99deg, #5F90F0 5.67%, #185AD9 98.08%);
 }
 
+.overlay {
+  background: linear-gradient(99deg, rgba(95, 144, 240, 0.56) 5.67%, rgba(24, 90, 217, 0.56) 98.08%);
+}
+
+.shadow_CNTC {
+  box-shadow: -30px 30px 80px 0px rgba(19, 55, 124, 0.04);
+}
+
 .btn-primary {
   background: linear-gradient(#5F90F0, #185AD9);
   color: white;
