--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -94,6 +94,23 @@ body {
   z-index: -1;
 }
 
+.footHighlight {
+  position: relative;
+  z-index: 2;
+}
+
+.footHighlight::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 23%;
+  width: 100%;
+  height: 10px;
+  background-color: #3e4051;
+  z-index: -1;
+}
+
+
 
 .verticalHigh {
   display: flex;
@@ -109,6 +126,40 @@ body {
   height: 80%;
   width: 12px;
   background: linear-gradient(99deg, #5F90F0 5.67%, #185AD9 98.08%);
+}
+
+.horiLine {
+  position: relative;
+}
+
+
+.horiLine::after {
+  content: "";
+  position: absolute;
+  height: 2px;
+  width: 27px;
+  top: 12px;
+  border-radius: 16px;
+  background: #185AD9;
+  right: -36px;
+
+}
+
+.underlineBg {
+  position: relative;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.underlineBg::after {
+  content: "";
+  height: 2px;
+  width: 37px;
+  background: #185AD9;
+
 }
 
 .shadowBox {
