--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -223,3 +223,18 @@ body {
 }
 
 @media screen and (min-width: 1921px) {}
+
+
+/*  heading section description width manage */
+@media screen and (max-width: 768px) {
+  .headV2-p {
+    width: 327px;
+  }
+
+}
+@media screen and (min-width:768) and (max-width: 1480px) {
+  .headV2-p {
+    width: 323px;
+  }
+
+}
